# subtitle_book

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
configs/: default.yaml
docs/superpowers/plans/: 2026-04-14-srt-subtitle-book-plan.md
docs/superpowers/specs/: 2026-04-14-srt-subtitle-book-design.md
src/: main.py  models.py  subtitle_book.py
src/generators/: epub.py  pdf.py
src/parsers/: config.py  srt.py
tests/: test_config.py  test_generators.py  test_models.py  test_srt.py
