[project]
name = "subtitle-book"
version = "0.1.0"
description = "将字幕文件 (SRT/VTT/ASS) 合并为带目录的电子书 (EPUB/PDF)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "ebooklib>=0.18",
    # PDF 生成可选依赖 (二选一):
    #   weasyprint>=52.5  (推荐，功能完整)
    #   或系统安装 pandoc (轻量，需配合 xelatex)
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
pdf-weasyprint = ["weasyprint>=52.5"]
pdf-pandoc = []   # 用户自行安装 pandoc + xelatex
all = ["ebooklib>=0.18", "weasyprint>=52.5"]

[project.scripts]
subtitle-book = "src.subtitle_book:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
